--- a/final-project/gallery.html
+++ b/final-project/gallery.html
@@ -37,4 +37,13 @@
     
   </nav>
 </header>
+<main>
+<div id="gallery">
+  <img src="images/cake.jpg" alt="Gallery Image 1">
+  <img src="images/Espumillas.jpg" alt="Gallery Image 2">
+  <img src="images/flan.jpg" alt="Gallery Image 3">
+  <img src="images/coffee.jpg" alt="Gallery Image 4">
+  <img src="images/cheese scone.jpg" alt="Gallery Image 5">
+</div>
+</main>
 </html>
