--- a/final-project/contact.html
+++ b/final-project/contact.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery - Casa Dulce</title>
+    <title>Casa Dulce Bakery</title>
     <link rel="stylesheet" href="/css-style/style.css">
+    
 </head>
  <header>
  <div class="title-box"></div>
-  <h1>Gallery</h1>
+  <h1>Contact</h1>
 
   <nav class="main-nav">
     <!-- class stuff dropdown -->
@@ -37,17 +38,13 @@
   </nav>
 </header>
 <main>
-<div class="image-row1">
-  <img src="images/cake.jpg" alt="Gallery Image 1">
-  <img src="images/Espumillas.jpg" alt="Gallery Image 2">
-</div>
-<div class="image-row2">
-  <img src="images/flan.jpg" alt="Gallery Image 3">
-  <img src="images/coffee.jpg" alt="Gallery Image 4">
-</div>
-<div class="image-row3">
-  <img src="images/cheese-scone.jpg" alt="Gallery Image 5">
-  <img src="images/danish.jpg" alt="Gallery Image 6">
-</div>
+    <div id="section2" style="height:200px;">
+       <p>Contact Info:</p>
+       <p class="phone"><a href="tel:(123)456-7890">(123)456-7890</a></p>
+       <p class="email"><a href="mailto:email@stuff.com">email@stuff.com</a></p>
+       <p class="address"><a>address: 123 Bakery Lane, Alpharetta, GA 30004</a></p>
+      </div>
+      <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3309.168214149194!2d-84.07288792482603!3d33.962515673190794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f5bcfd0ff27f11%3A0x6c3cdec22c110924!2sGwinnett%20Technical%20College!5e0!3m2!1sen!2sus!4v1759830625226!5m2!1sen!2sus" width="400" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+</iframe>
 </main>
 </html>
