--- a/final-project/menu.html
+++ b/final-project/menu.html
@@ -8,7 +8,7 @@
 </head>
  <header>
  <div class="title-box"></div>
-  <h1>Gallery</h1>
+  <h1>Menu</h1>
 
   <nav class="main-nav">
     <!-- class stuff dropdown -->
@@ -37,17 +37,19 @@
   </nav>
 </header>
 <main>
-<div class="image-row1">
-  <img src="images/cake.jpg" alt="Gallery Image 1">
-  <img src="images/Espumillas.jpg" alt="Gallery Image 2">
-</div>
-<div class="image-row2">
-  <img src="images/flan.jpg" alt="Gallery Image 3">
-  <img src="images/coffee.jpg" alt="Gallery Image 4">
-</div>
-<div class="image-row3">
-  <img src="images/cheese-scone.jpg" alt="Gallery Image 5">
-  <img src="images/danish.jpg" alt="Gallery Image 6">
-</div>
+    <div class="menu">
+    <p>1. Chocolate cake - A rich chocolate cake topped with fresh sliced strawberries and colorful rainbow sprinkles. 
+        slice = $3.50 , whole = $15.00</p>
+    <p>2. Espumillas - A traditional Nicaraguan dessert made from whipped egg whites and sugar, often flavored with fruit. 
+        small = $2.00 , large = $4.00</p>
+    <p>3. Flan - A creamy caramel custard dessert that is a favorite in many Latin American countries. 
+        slice = $3.00 , whole = $10.00</p>
+    <p>4. Cheese Scone - A savory scone made with cheese, perfect for breakfast or a snack. 
+        each = $2.50</p>
+    <p>5. Danish Pastry - A flaky pastry filled with fruit or cream cheese, topped with icing.
+        each = $3.00</p>
+    <p>6. Coffee - Freshly brewed coffee, available in various styles including espresso, cappuccino, and latte. 
+        small = $2.00 , large = $3.00</p>
+        </div>
 </main>
 </html>
