--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="./fall_fy2025/chap12/index.html">chap12</a>
       </div>
       </div>
-      <a href="/final-project/index.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="/final-project/about.html">About</a>
       <a href="/final-project/menu.html">Menu</a>
       <a href="/final-project/contact.html">Contact</a>
