--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
 
 <main>
 <div id="bakery">
-  <img src="images/bakery.jpg" alt="Bakery">
+  <img src="final-project/images/bakery.jpg" alt="Bakery">
 </div>
-
+<footer>
+  
+</footer>
 </main>
 </html>
